WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
45322
GIF image down sampling can miss some lines
https://bugs.webkit.org/show_bug.cgi?id=45322
Summary
GIF image down sampling can miss some lines
Yong Li
Reported
2010-09-07 14:14:46 PDT
The bug is obvious. Patch is coming soon
Attachments
the patch
(1.72 KB, patch)
2010-09-07 15:02 PDT
,
Yong Li
no flags
Details
Formatted Diff
Diff
patch with layout test
(112.86 KB, patch)
2010-09-08 07:48 PDT
,
Yong Li
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Yong Li
Comment 1
2010-09-07 15:02:49 PDT
Created
attachment 66771
[details]
the patch The bug is that xEnd and yEnd were calculated based on already scaled values (xBegin, yBegin). So they were scaled twice...
Peter Kasting
Comment 2
2010-09-07 15:08:06 PDT
Patch itself seems fine to me (but I'm not a reviewer). It would be nice to layout-test this with a pixel test.
Yong Li
Comment 3
2010-09-07 15:20:08 PDT
(In reply to
comment #2
)
> Patch itself seems fine to me (but I'm not a reviewer). > > It would be nice to layout-test this with a pixel test.
I didn't add a layout-test because it can be triggered by any GIF but only with certain configurations (down-sampling must be enabled, and the max pixels threshold must be some numbers)
Peter Kasting
Comment 4
2010-09-07 15:29:42 PDT
That's fine, it just means you'll have different layout test results for platforms with down-sampling versus without. Even if no down-sampling platform runs layout tests (bad!), please at least add a manual test for this (WebCore/manual-tests/).
Yong Li
Comment 5
2010-09-08 07:48:24 PDT
Created
attachment 66898
[details]
patch with layout test
WebKit Commit Bot
Comment 6
2010-09-16 04:16:26 PDT
Comment on
attachment 66898
[details]
patch with layout test Clearing flags on attachment: 66898 Committed
r67604
: <
http://trac.webkit.org/changeset/67604
>
WebKit Commit Bot
Comment 7
2010-09-16 04:16:31 PDT
All reviewed patches have been landed. Closing bug.
Satish Sampath
Comment 8
2010-09-16 04:56:12 PDT
This layout test fails in chromium, probably because there is no pixel test baseline to check against. I also notice that the HTML refers to the file with ".gif" extension whereas the checked in file has ".GIF" in caps. I'll try to add the baseline and fix the file name.
Yong Li
Comment 9
2010-09-16 07:56:46 PDT
(In reply to
comment #8
)
> I also notice that the HTML refers to the file with ".gif" extension whereas the checked in file has ".GIF" in caps. I'll try to add the baseline and fix the file name.
Oops. thanks
Dimitri Glazkov (Google)
Comment 10
2012-04-26 20:15:02 PDT
The test is crashing on Chromium bots sporadically. What gives?
http://test-results.appspot.com/dashboards/flakiness_dashboard.html#showExpectations=true&tests=fast%2Fimages%2Fgif-large-checkerboard.html
Yong Li
Comment 11
2012-04-27 07:04:43 PDT
(In reply to
comment #10
)
> The test is crashing on Chromium bots sporadically. What gives? > >
http://test-results.appspot.com/dashboards/flakiness_dashboard.html#showExpectations=true&tests=fast%2Fimages%2Fgif-large-checkerboard.html
I cannot see anything with the URL. Is there a stack trace? Is chromium using image down sampling?
Dimitri Glazkov (Google)
Comment 12
2012-04-27 09:46:42 PDT
(In reply to
comment #11
)
> (In reply to
comment #10
) > > The test is crashing on Chromium bots sporadically. What gives? > > > >
http://test-results.appspot.com/dashboards/flakiness_dashboard.html#showExpectations=true&tests=fast%2Fimages%2Fgif-large-checkerboard.html
> > I cannot see anything with the URL. Is there a stack trace? Is chromium using image down sampling?
Click on "show results" link, you'll see some stack traces.
Yong Li
Comment 13
2012-04-27 10:07:16 PDT
(In reply to
comment #12
)
> (In reply to
comment #11
) > > (In reply to
comment #10
) > > > The test is crashing on Chromium bots sporadically. What gives? > > > > > >
http://test-results.appspot.com/dashboards/flakiness_dashboard.html#showExpectations=true&tests=fast%2Fimages%2Fgif-large-checkerboard.html
> > > > I cannot see anything with the URL. Is there a stack trace? Is chromium using image down sampling? > > Click on "show results" link, you'll see some stack traces.
I cannot even see "show results" link. Can you paste them here? Also the gif image in the test is super big. The bot could run out-of-memory
Dimitri Glazkov (Google)
Comment 14
2012-04-27 10:34:45 PDT
(In reply to
comment #13
)
> (In reply to
comment #12
) > > (In reply to
comment #11
) > > > (In reply to
comment #10
) > > > > The test is crashing on Chromium bots sporadically. What gives? > > > > > > > >
http://test-results.appspot.com/dashboards/flakiness_dashboard.html#showExpectations=true&tests=fast%2Fimages%2Fgif-large-checkerboard.html
> > > > > > I cannot see anything with the URL. Is there a stack trace? Is chromium using image down sampling? > > > > Click on "show results" link, you'll see some stack traces. > > I cannot even see "show results" link. Can you paste them here? Also the gif image in the test is super big. The bot could run out-of-memory
Please join discussion on
bug 85073
to continue investigation of the crash.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug