2010-09-16  Yong Li  <yoli@rim.com>

Reviewed by George Staikos.

        Add a test for GIF down sampling.

        GIF image down sampling can miss some lines
        https://bugs.webkit.org/show_bug.cgi?id=45322

        * fast/images/gif-large-checkerboard.html: Added.
        * fast/images/resources/large-gif-checkerboard.GIF: Added.
2010-09-16  Yong Li  <yoli@rim.com>

        Reviewed by George Staikos.

        Fix the bug that GIF image down sampling can miss some lines.
        https://bugs.webkit.org/show_bug.cgi?id=45322

        Test: fast/images/gif-large-checkerboard.html

        * platform/image-decoders/gif/GIFImageDecoder.cpp:
        (WebCore::GIFImageDecoder::haveDecodedRow):

Canonical link: https://commits.webkit.org/58328@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@67604 268f45cc-cd09-0410-ab3c-d52691b4dbfc